--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.15.0",
     "lucide-react": "^0.544.0",
     "next": "14.2.32",
+    "permissionless": "^0.2.57",
     "pinata": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
@@ -32,6 +33,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.32",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
